--- a/Brackets/brackets.reactuser/package.json
+++ b/Brackets/brackets.reactuser/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@fvilers/disable-react-devtools": "^1.3.0",
     "@types/node": "^20.12.5",
+    "i18next": "^23.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-i18next": "^14.1.0",
+    "react-router-dom": "^6.22.3",
+    "web-vitals": "^3.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
