--- a/Brackets/brackets.reactuser/package.json
+++ b/Brackets/brackets.reactuser/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@fvilers/disable-react-devtools": "^1.3.0",
     "@types/node": "^20.12.5",
+    "bootstrap": "^5.3.3",
     "i18next": "^23.11.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.0",
     "react-router-dom": "^6.22.3",
