Initial Match API E2E setup

--- a/Brackets/Brackets.API/appsettings.json
+++ b/Brackets/Brackets.API/appsettings.json
@@ -10,5 +10,33 @@
     "Name": "brackets",
     "Host": "localhost",
     "Port": 27017
+  },
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "Baufest.com",
+    "TenantId": "0e2eb8d8-b8c9-4ee3-97e0-07f405398b85",
+    "ClientId": "271a0a8a-54fa-4a88-8449-173de6a6e68f",
+    "ClientSecret": "uk88Q~EKK-Zz7W~pVuuXIp8Ta_wQ5zWWS~WpycX_",
+    "ClientCertificates": [
+    ],
+    "CallbackPath": "/signin-oidc"
+  },
+  "DownstreamApi": {
+    /*
+     'Scopes' contains space separated scopes of the Web API you want to call. This can be:
+      - a scope for a V2 application (for instance api:b3682cc7-8b30-4bd2-aaba-080c6bf0fd31/access_as_user)
+      - a scope corresponding to a V1 application (for instance <App ID URI>/.default, where  <App ID URI> is the
+        App ID URI of a legacy v1 Web application
+      Applications are registered in the https:portal.azure.com portal.
+    */
+    "BaseUrl": "https://graph.microsoft.com/beta",
+    "Scopes": "user.read"
+  },
+  "AppConfig": {
+    "BracketsApi": "https://baufestwc-api.azurewebsites.net",
+    "CupId": 2,
+    "ScoreViewRowsNumber": 50,
+    "HomeScoreRowsNumber": 4,
+    "DaysAfterStartForExtraPrediction": 7
   }
 }
