--- a/Brackets/Brackets.Infrastructure/Brackets.Infrastructure.csproj
+++ b/Brackets/Brackets.Infrastructure/Brackets.Infrastructure.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
@@ -9,6 +9,11 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.1" />
     <PackageReference Include="MongoDB.Driver" Version="2.23.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Brackets.Application\Brackets.Application.csproj" />
+    <ProjectReference Include="..\Brackets.Domain\Brackets.Domain.csproj" />
   </ItemGroup>
 
 </Project>
