--- a/Brackets/brackets.reactuser/package.json
+++ b/Brackets/brackets.reactuser/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fvilers/disable-react-devtools": "^1.3.0",
+    "@tanstack/react-query": "^5.32.0",
     "@types/node": "^20.12.5",
     "bootstrap": "^5.3.3",
     "i18next": "^23.11.1",
